Fixed bug #49361 (wordwrap() wraps incorrectly on end of line boundaries).